--- a/src/main.css
+++ b/src/main.css
@@ -9,3 +9,20 @@
 .log-score{
     @apply text-center text-gray-400 text-4xl p-2 rounded-lg ml-2 mb-2 opacity-75;
 }
+
+.bg-gray-100 {
+    background-color: #232323 !important;
+}
+
+.bg-gray-200 {
+    background-color: #262626 !important;
+}
+
+.bg-gray-300 {
+    background-color: #2e2e2e !important;
+}
+
+
+.bg-gray-400 {
+    background-color: #363636 !important;
+}
